--- a/world.css
+++ b/world.css
@@ -1,3 +1,12 @@
-input {
-    border-radius: 5px;
+#content {
+    margin: auto;
+    width: 50%;
+    padding: 25px;
+    margin-top: 25px;
+    border-radius: 10px;
+    background-color: #E0E0E0;
+}
+
+#lookup {
+    margin-left: 10px;
 }
